feat: passwords page updated to logins manager

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "nav": {
     "home": "Home",
-    "passwords": "Passwords",
+    "logins": "Logins",
     "notes": "Notes",
     "signIn": "Sign In",
     "signUp": "Sign Up",
