Implement Personal Information feature
Added comprehensive Personal Info management feature:

FEATURE STRUCTURE:
- Directory structure: components/, composables/, services/, types/
- Following established project patterns and conventions

TYPES & MODELS:
- PersonalInfo interface with contact details, address, professional info
- Support for 2 phone numbers and 2 emails max with primary designation
- Added to shared-types package for cross-package usage
- Frontend-specific UI state and form state interfaces

VALIDATION:
- Comprehensive validation schema for all personal info fields
- Phone number, email, and website URL validation
- Required field validation for core information

SERVICES:
- PersonalInfoApiService with full CRUD operations
- Autocomplete data helper for form filling
- Following existing API service patterns

COMPONENTS:
- PersonalInfoPage: Main page with display, edit, delete functionality
- EditPersonalInfoModal: Comprehensive form for adding/editing info
- Dynamic phone/email management with primary designation
- Professional information section (optional fields)
- Form validation integration

COMPOSABLES:
- usePersonalInfo: State management and business logic
- Computed properties for full name, address formatting
- CRUD operations with loading states and error handling

BUSINESS LOGIC:
- Personal info creation, update, deletion
- Validation helpers and formatting utilities
- Primary contact info extraction helpers

ROUTING & NAVIGATION:
- Added /personal-info route with authentication requirement
- Updated SideMenu with Personal Info navigation link
- Added translations for English and Spanish

INTEGRATION:
- Barrel files for clean imports throughout feature
- Consistent with existing project architecture
- Ready for form auto-fill functionality

PURPOSE:
Enable users to store personal information for auto-filling
website forms, improving user experience and reducing
repetitive data entry across web forms.

--- a/packages/frontend/src/locales/en.json
+++ b/packages/frontend/src/locales/en.json
@@ -3,6 +3,7 @@
     "home": "Home",
     "logins": "Logins",
     "notes": "Notes",
+    "personalInfo": "Personal Info",
     "signIn": "Sign In",
     "signUp": "Sign Up",
     "language": "Language"
