--- a/packages/frontend/src/locales/es.json
+++ b/packages/frontend/src/locales/es.json
@@ -3,6 +3,7 @@
     "home": "Inicio",
     "logins": "Inicios de Sesión",
     "notes": "Notas",
+    "personalInfo": "Info Personal",
     "signIn": "Iniciar Sesión",
     "signUp": "Registrarse",
     "language": "Idioma"
